Adding new projects

--- a/templates/works/customdesk.html
+++ b/templates/works/customdesk.html
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>004 : GUI Calculator</title>
+  <title>007 : Custom Desk</title>
 </head>
 
 <body class="">
@@ -56,10 +56,12 @@
             <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
-            <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
+            <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
             <li><a href="./snakegame.html" title="Snake Game" class="active">005</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
-            <!-- <li><a href="./comingsoon.html" title="">007</a></li> -->
+            <li><a href="./index.html" title="">006</a></li>
+            <li><a href="./customdesk.html" title="Custom Desk" class="active">007</a></li>
+            <li><a href="./index.html" title="">008</a></li>
+            <li><a href="./index.html" title="">009</a></li>
           </ul>
 
         </div>
@@ -74,24 +76,59 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">004 : GUI Calculator</h1>
+              <h1 class="h2">007 : Custom Desk</h1>
             </div>
-            <p>Using the Tkinter package for Python, I built a gaphical user interface calculator capable of performing
-              basic math operations.
+            <p>Play the classic phone game "Snake" right in the terminal. The snake never stops moving and grows as it
+              eats apples. Quickly navigate to avoid walls and eating your own tail!
             </p>
-            <a href="https://github.com/ascobee/convenient-calculator" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/snake-game-cli" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
 
-        <div class="col-xs-12">
+        <div class="col-xs-4">
           <figure class="text-center">
-            <a href="../static/assets/images/calculatorinterface.png" target="_blank" title="Click to enlarge"
-              class="img-btn">
-              <img src="../static/assets/images/calculatorinterface.png" class="img-responsive img-rounded img-centered"
-                alt="Calculator Interface">
+            <a href="../static/assets/images/desk/model_1.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/model_1.png" class="img-responsive img-rounded img-centered"
+                alt="Desk Model #1">
             </a>
-            <p>Calculator Interface</p>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/model_2.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/model_2.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk Model #2">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/model_3.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/model_3.png" class="img-responsive img-rounded img-centered"
+                alt="Desk Model #3">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/model_4.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/model_4.png" class="img-responsive img-rounded img-centered"
+                alt="Desk Model #4">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/desk_1.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/desk_1.png" class="img-responsive img-rounded img-centered"
+                alt="Desk #1">
+            </a>
           </figure>
         </div>
 
