--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -16,7 +16,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
   <meta name="msapplication-tap-highlight" content="no">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
@@ -80,12 +79,14 @@
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>001/004</h4>
+                      <h4>001/009</h4>
                       <h3>Password Checker</h3>
-                      <p>Securely check to see if your passwords have been exposed in a data
-                        breach via the terminal.</p>
-                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <p>Have any of your passwords been exposed in a data breach?</p>
+                      <!-- <p>Securely check to see if your passwords have been exposed in a data
+                        breach via the terminal.</p> -->
+                      <!-- <a href="./passwordchecker.html" title="" class="btn btn-default">Check it
+                        out!</a> -->
+                      <a href="./passwordchecker.html" title="" class="btn btn-default">Find out now!</a>
                     </div>
                   </div>
 
@@ -94,10 +95,11 @@
                       <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>002/004</h4>
+                      <h4>002/009</h4>
                       <h3>Hacker News: Top Stories</h3>
-                      <p>Get a list of the top stories (>200 points) from the first two pages on
-                        Hacker News.</p>
+                      <p>Just the highlights. Get a list of the top stories from Hacker News.</p>
+                      <!-- <p>Get a list of the top stories (>200 points) from the first two pages on
+                        Hacker News.</p> -->
                       <a href="./topstories.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
@@ -108,10 +110,12 @@
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/004</h4>
+                      <h4>003/009</h4>
                       <h3>Website: Omnifood</h3>
-                      <p>A website built for a fictional company called Omnifood, a premium food
-                        delivery service.</p>
+                      <!-- <p>A premium website for a premium [fictional] food delivery service.</p> -->
+                      <!-- <p>A website built for a fictional company called Omnifood, a premium food
+                        delivery service.</p> -->
+                      <p>A premium website for a (fictional) premium food delivery service.</p>
                       <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check
                         it out!</a>
                     </div>
@@ -122,12 +126,91 @@
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>004/004</h4>
-                      <h3>GUI Calculator</h3>
-                      <p>This graphical user interface calculator can perform addition,
+                      <h4>004/009</h4>
+                      <h3>Convenient Calculator</h3>
+                      <p>This handy calculator can perform addition, subtraction, exponents, and more.</p>
+                      <!-- <p>This graphical user interface calculator can perform addition,
                         subtraction, multiplication,
-                        division, and more.</p>
+                        division, and more.</p> -->
                       <a href="./calculator.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./snakegame.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>005/009</h4>
+                      <h3>Classic Game: Snake</h3>
+                      <p>Set a new high score in the classic phone game "Snake" right in the terminal.</p>
+                      <a href="./snakegame.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./index.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>006/009</h4>
+                      <h3>Coming Soon: New Project!</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                      <a href="./index.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div>
+
+                  <!-- <div class="col-sm-4">
+                    <a href="./customdesk.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>007/009</h4>
+                      <h3>Just For Fun: Custom Desk</h3>
+                      <p>A standard desk would never fit, so I designed and built one that would.</p>
+                      <a href="./customdesk.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div> -->
+
+                  <div class="col-sm-4">
+                    <a href="./index.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>007/009</h4>
+                      <h3>Coming Soon: New Project!</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                      <a href="./index.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./index.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>008/009</h4>
+                      <h3>Coming Soon: New Project!</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                      <a href="./index.html" title="" class="btn btn-default">Check it
+                        out!</a>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4">
+                    <a href="./index.html" title="" class="black-image-project-hover">
+                      <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>009/009</h4>
+                      <h3>Coming Soon: New Project!</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                      <a href="./index.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
