--- a/templates/works/snakegame.html
+++ b/templates/works/snakegame.html
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>004 : GUI Calculator</title>
+  <title>005 : Snake Game</title>
 </head>
 
 <body class="">
@@ -74,24 +74,23 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">004 : GUI Calculator</h1>
+              <h1 class="h2">005 : Snake Game</h1>
             </div>
-            <p>Using the Tkinter package for Python, I built a gaphical user interface calculator capable of performing
-              basic math operations.
+            <p>Play the classic phone game "Snake" right in the terminal. The snake never stops moving and grows as it
+              eats apples. Quickly navigate to avoid walls and eating your own tail!
             </p>
-            <a href="https://github.com/ascobee/convenient-calculator" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/snake-game-cli" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
 
         <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/calculatorinterface.png" target="_blank" title="Click to enlarge"
-              class="img-btn">
-              <img src="../static/assets/images/calculatorinterface.png" class="img-responsive img-rounded img-centered"
-                alt="Calculator Interface">
+            <a href="../static/assets/gifs/snakegame-gif.gif" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/gifs/snakegame-gif.gif" class="img-responsive img-rounded img-centered"
+                alt="Snake Game Terminal">
             </a>
-            <p>Calculator Interface</p>
+            <p>Snake Game Terminal</p>
           </figure>
         </div>
 
