--- a/templates/works/topstories.html
+++ b/templates/works/topstories.html
@@ -16,7 +16,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
   <meta name="msapplication-tap-highlight" content="no">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
@@ -34,7 +33,7 @@
   <div id="site-border-bottom"></div>
 
   <header>
-    <nav class="navbar  navbar-fixed-top navbar-default">
+    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false">
@@ -58,8 +57,9 @@
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">005</a></li> -->
+            <li><a href="./snakegame.html" title="Snake Game" class="active">005</a></li>
             <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
+            <!-- <li><a href="./comingsoon.html" title="">007</a></li> -->
           </ul>
 
         </div>
@@ -85,22 +85,6 @@
           </div>
         </div>
 
-        <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
-          <div class="row">
-            <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge" class="">
-                <img src="./static/assets/images/topstoriesscript.png" class="img-responsive img-rounded"
-                  alt="Top Stories Script">
-              </a>
-              <p>Top Stories Script</p>
-            </div>
-            <div class="col-xs-12 col-md-6">
-              <img src="./static/assets/images/work001-03.jpg" class="img-responsive" alt="">
-              <p>Memphis skyline</p>
-            </div>
-          </div>
-        </div> -->
-
         <div class="col-xs-12">
           <figure class="text-center">
             <a href="../static/assets/images/topstoriesterminal.png" target="_blank" title="Click to enlarge"
@@ -111,6 +95,7 @@
             <p>Top Stories Terminal</p>
           </figure>
         </div>
+
         <div class="col-xs-12">
           <figure class="text-center">
             <a href="../static/assets/images/topstoriesscript.png" target="_blank" title="Click to enlarge"
@@ -121,15 +106,6 @@
             <p>Top Stories Script</p>
           </figure>
         </div>
-
-        <!--         <div class="col-xs-12">
-          <figure class="">
-            <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
-              <img src="./static/assets/images/topstoriesterminal.png" class="img-responsive img-rounded img-centered"
-                alt="Top Stories Terminal">
-            </a>
-          </figure>
-        </div> -->
 
       </div>
     </div>
