Major changes behind the scenes. Changes to website design. Added new projects, robots.txt file, and sitemap.xml

--- a/templates/works/backend-rest-api.html
+++ b/templates/works/backend-rest-api.html
@@ -11,22 +11,19 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
-  <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta charset="UTF-8">
+  <meta name="description" content="Fully functioning REST API built using the Django REST framework.">
+  <meta name="keywords" content="REST, API, Django, python">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>005 : Backend REST API</title>
+  <title>Backend REST API</title>
 </head>
 
 <body class="">
@@ -34,9 +31,9 @@
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
-  <!-- Add your content of header -->
+
   <header>
-    <nav class="navbar  navbar-fixed-top navbar-default">
+    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false">
@@ -47,23 +44,26 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="../" title="">01 : Home</a></li>
-            <li><a href="./" title="">02 : Works</a></li>
-            <li><a href="../about.html" title="">03 : About</a></li>
-            <li><a href="../contact.html" title="">04 : Contact</a></li>
-            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
-            <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
-            <li><a href="./backend-rest-api-with-django.html" title="Backend REST API" class="active">005</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
+            <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
+            <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
@@ -75,40 +75,17 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">005 : Backend REST API</h1>
+              <h1 class="h2">006 : Backend REST API</h1>
             </div>
-            <p>Working in Python, I was able to create a password checker that has become a useful tool for
-              myself and could be to others when trying to avoid being a target in a data breach. This uses the
-              haveibeenpwned.com API to see how many times a particular password has been leaked. Although this is a
-              simple script, it could be useful for any user.
+            <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
+              could be to others when trying to avoid being a target in a data breach. This uses the Pwned Passwords API
+              to find out how many times a particular password has been leaked. This simple script could be useful for
+              any user.
             </p>
             <a href="https://github.com/ascobee/recipe-app-api" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
-
-        <!--         <div class="col-md-8 col-md-offset-2 section-container-spacer">
-          <div class="row">
-            <div class="col-xs-12 col-md-6">
-              <a href="./static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
-                class="">
-                <img src="./static/assets/images/passwordcheckerscript.png" class="img-responsive img-rounded"
-                  alt="Password Checker Script">
-              </a>
-              <p>Password Checker Script</p>
-            </div>
-            <div class="col-xs-12 col-md-6">
-              <figure class="">
-                <a href="./static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
-                  class="">
-                  <img src="./static/assets/images/passwordcheckerterminal.png"
-                    class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
-                </a>
-              </figure>
-              <p>Password Checker Terminal</p>
-            </div>
-          </div>
-        </div> -->
 
         <div class="col-xs-12">
           <figure class="text-center">
@@ -120,6 +97,7 @@
             <p>Password Checker Terminal</p>
           </figure>
         </div>
+
         <div class="col-xs-12">
           <figure class="text-center">
             <a href="../static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
@@ -131,19 +109,9 @@
           </figure>
         </div>
 
-        <!-- <div class="col-xs-12">
-          <figure class="">
-            <a href="https://github.com/ascobee/portfolio" target="_blank" title="Download" class="">
-              <img src="./static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
-            </a>
-          </figure>
-        </div> -->
-
       </div>
     </div>
   </div>
-
 
   <footer class="footer-container text-center">
     <div class="container">
@@ -152,9 +120,7 @@
           <p>
             Copyright &copy;
             <script type="text/javascript">document.write(new Date().getFullYear());</script>
-            AUSTIN SCOBEE | Website created with <a href="http://www.mashup-template.com/"
-              title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/"
-              title="Beautiful Free Images">Unsplash</a>
+            AUSTIN SCOBEE
           </p>
         </div>
       </div>
