--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -11,12 +11,12 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="description" content="Here are a few of my favorite projects.">
+  <meta name="keywords" content="projects, works">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
@@ -45,13 +45,13 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="../" title="">01 : Home</a></li>
-            <li><a href="./" title="">02 : Works</a></li>
-            <li><a href="../about.html" title="">03 : About</a></li>
-            <li><a href="../contact.html" title="">04 : Contact</a></li>
-            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+            <li><a href="./">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
@@ -59,21 +59,18 @@
   <div class="section-container">
     <div class="container">
       <div class="row">
-
         <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
           <div class="text-center">
-            <h1 class="h2">02 : Works</h1>
+            <h1 class="h2">Works</h1>
             <p>Here are a few of my favorite projects. More projects coming soon!</p>
           </div>
         </div>
 
         <div class="col-md-12">
-
           <div id="myCarousel" class="carousel slide projects-carousel">
             <div class="carousel-inner">
               <div class="item active">
                 <div class="row">
-
                   <div class="col-sm-4">
                     <a href="./passwordchecker.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
@@ -82,10 +79,6 @@
                       <h4>001/009</h4>
                       <h3>Password Checker</h3>
                       <p>Have any of your passwords been exposed in a data breach?</p>
-                      <!-- <p>Securely check to see if your passwords have been exposed in a data
-                        breach via the terminal.</p> -->
-                      <!-- <a href="./passwordchecker.html" title="" class="btn btn-default">Check it
-                        out!</a> -->
                       <a href="./passwordchecker.html" title="" class="btn btn-default">Find out now!</a>
                     </div>
                   </div>
@@ -98,8 +91,6 @@
                       <h4>002/009</h4>
                       <h3>Hacker News: Top Stories</h3>
                       <p>Just the highlights. Get a list of the top stories from Hacker News.</p>
-                      <!-- <p>Get a list of the top stories (>200 points) from the first two pages on
-                        Hacker News.</p> -->
                       <a href="./topstories.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
@@ -112,9 +103,6 @@
                     <div class="card-container card-container-lg">
                       <h4>003/009</h4>
                       <h3>Website: Omnifood</h3>
-                      <!-- <p>A premium website for a premium [fictional] food delivery service.</p> -->
-                      <!-- <p>A website built for a fictional company called Omnifood, a premium food
-                        delivery service.</p> -->
                       <p>A premium website for a (fictional) premium food delivery service.</p>
                       <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check
                         it out!</a>
@@ -129,9 +117,6 @@
                       <h4>004/009</h4>
                       <h3>Convenient Calculator</h3>
                       <p>This handy calculator can perform addition, subtraction, exponents, and more.</p>
-                      <!-- <p>This graphical user interface calculator can perform addition,
-                        subtraction, multiplication,
-                        division, and more.</p> -->
                       <a href="./calculator.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
@@ -163,28 +148,15 @@
                     </div>
                   </div>
 
-                  <!-- <div class="col-sm-4">
+                  <div class="col-sm-4">
                     <a href="./customdesk.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>007/009</h4>
-                      <h3>Just For Fun: Custom Desk</h3>
+                      <h3>Just For Fun: Custom Solid Wood Desk</h3>
                       <p>A standard desk would never fit, so I designed and built one that would.</p>
                       <a href="./customdesk.html" title="" class="btn btn-default">Check it
-                        out!</a>
-                    </div>
-                  </div> -->
-
-                  <div class="col-sm-4">
-                    <a href="./index.html" title="" class="black-image-project-hover">
-                      <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
-                    </a>
-                    <div class="card-container card-container-lg">
-                      <h4>007/009</h4>
-                      <h3>Coming Soon: New Project!</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./index.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
@@ -219,13 +191,11 @@
               </div>
             </div>
           </div>
-
         </div>
 
       </div>
     </div>
   </div>
-
 
   <footer class="footer-container text-center">
     <div class="container">
@@ -246,6 +216,7 @@
       navActivePage();
     });
   </script>
+
   <script type="text/javascript" src="../static/main.70a66962.js"></script>
 
 </body>
