--- a/templates/about.html
+++ b/templates/about.html
@@ -11,15 +11,12 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
-  <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
-  <!-- Disable tap highlight on IE -->
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta charset="UTF-8">
+  <meta name="description" content="Utilizing my chemical and electrical engineering background provides perspective as I develop solutions in Python and C++.">
+  <meta name="keywords" content="about, education, languages">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
@@ -34,9 +31,9 @@
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
-  <!-- Add your content of header -->
+
   <header>
-    <nav class="navbar  navbar-fixed-top navbar-default">
+    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false">
@@ -47,14 +44,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="./" title="">01 : Home</a></li>
-            <li><a href="./works/" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
@@ -64,13 +61,12 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : About me</h1>
+            <h1 class="h2">About me</h1>
           </div>
 
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
-
                 <div class="col-xs-12 col-md-6">
                   <h3>Summary</h3>
                   <p>Versatile, naturally curious engineer with three years of professional experience. Graduate of the
@@ -89,6 +85,7 @@
                           <li>PHP</li>
                         </ul>
                       </div>
+
                       <div class="col-xs-6">
                         <ul>
                           <li>Java</li>
@@ -130,7 +127,6 @@
     </div>
   </div>
 
-
   <footer class="footer-container text-center">
     <div class="container">
       <div class="row">
@@ -150,7 +146,9 @@
       navActivePage();
     });
   </script>
+
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
+
 </body>
 
 </html>
