--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,13 +11,12 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="description" content="How to contact me.">
+  <meta name="keywords" content="contact, networking, jobs">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
@@ -32,6 +31,7 @@
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
+
   <header>
     <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
@@ -44,14 +44,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="./" title="">01 : Home</a></li>
-            <li><a href="./works/" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
         </div>
+
       </div>
     </nav>
   </header>
@@ -61,7 +61,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
+            <h1 class="h2">Contact me</h1>
           </div>
 
           <div class="row">
@@ -125,17 +125,17 @@
                     </a>
 
                   </div>
+
                 </div>
+
               </form>
             </div>
-
           </div>
 
         </div>
       </div>
     </div>
   </div>
-
 
   <footer class="footer-container text-center">
     <div class="container">
