--- a/templates/formerror.html
+++ b/templates/formerror.html
@@ -11,21 +11,19 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="description" content="Sorry, something went wrong! Please try again.">
+  <meta name="keywords" content="error">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="./static/favicon.ico" rel="icon">
+  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
   <title>Submission Failed!</title>
-
-  <link href="./static/main.3f6952e4.css" rel="stylesheet">
 </head>
 
 <body class="">
@@ -33,6 +31,7 @@
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
   <div id="site-border-bottom"></div>
+
   <header>
     <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
@@ -45,15 +44,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="./" title="">01 : Home</a></li>
-            <li><a href="./works/" title="">02 : Works</a></li>
-            <li><a href="./about.html" title="">03 : About</a></li>
-            <li><a href="./contact.html" title="">04 : Contact</a></li>
-            <li><a href="./Austin_Scobee_Resume_2020.pdf" target="_blank" title="">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
-
         </div>
+
       </div>
     </nav>
   </header>
@@ -63,7 +61,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
+            <h1 class="h2">Contact me</h1>
           </div>
 
           <div class="row">
@@ -98,6 +96,7 @@
   </script>
 
   <script type="text/javascript" src="./static/main.70a66962.js"></script>
+
 </body>
 
 </html>
