--- a/templates/works/calculator.html
+++ b/templates/works/calculator.html
@@ -11,19 +11,19 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="description" content="This handy calculator can perform addition, subtraction, exponents, and more.">
+  <meta name="keywords" content="calculator, python">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>004 : GUI Calculator</title>
+  <title>Convenient Calculator</title>
 </head>
 
 <body class="">
@@ -44,25 +44,26 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="../" title="">01 : Home</a></li>
-            <li><a href="./" title="">02 : Works</a></li>
-            <li><a href="../about.html" title="">03 : About</a></li>
-            <li><a href="../contact.html" title="">04 : Contact</a></li>
-            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./passwordchecker.html" title="Password Checker" class="active">001</a></li>
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
-            <li><a href="./calculator.html" title="GUI Calculator" class="active">004</a></li>
-            <li><a href="./snakegame.html" title="Snake Game" class="active">005</a></li>
-            <!-- <li><a href="./comingsoon.html" title="">006</a></li> -->
-            <!-- <li><a href="./comingsoon.html" title="">007</a></li> -->
+            <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
+            <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
-
         </div>
+
       </div>
     </nav>
   </header>
@@ -74,7 +75,7 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">004 : GUI Calculator</h1>
+              <h1 class="h2">004 : Convenient Calculator</h1>
             </div>
             <p>Using the Tkinter package for Python, I built a gaphical user interface calculator capable of performing
               basic math operations.
@@ -99,7 +100,6 @@
     </div>
   </div>
 
-
   <footer class="footer-container text-center">
     <div class="container">
       <div class="row">
@@ -121,6 +121,7 @@
   </script>
 
   <script type="text/javascript" src="../static/main.70a66962.js"></script>
+
 </body>
 
 </html>
