--- a/templates/works/customdesk.html
+++ b/templates/works/customdesk.html
@@ -11,19 +11,19 @@
 
     gtag('config', 'UA-159921114-1');
   </script>
+
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
-  <meta name="google" content="notranslate" />
-  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="description" content="I designed and built my own custom solid wood desk.">
+  <meta name="keywords" content="custom, desk, engineering">
+  <meta name="author" content="Austin Scobee">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://kit.fontawesome.com/ba70ff08b2.js" crossorigin="anonymous"></script>
 
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>007 : Custom Desk</title>
+  <title>Custom Solid Wood Desk</title>
 </head>
 
 <body class="">
@@ -44,12 +44,11 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav ">
-            <li><a href="../" title="">01 : Home</a></li>
-            <li><a href="./" title="">02 : Works</a></li>
-            <li><a href="../about.html" title="">03 : About</a></li>
-            <li><a href="../contact.html" title="">04 : Contact</a></li>
-            <li><a href="../Austin_Scobee_Resume_2020.pdf" target="_blank" title="View/Download">05 : Resume</a></li>
+          <ul class="nav navbar-nav">
+            <li><a href="./">Works</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
@@ -57,14 +56,14 @@
             <li><a href="./topstories.html" title="Hacker News: Top Stories" class="active">002</a></li>
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
-            <li><a href="./snakegame.html" title="Snake Game" class="active">005</a></li>
-            <li><a href="./index.html" title="">006</a></li>
-            <li><a href="./customdesk.html" title="Custom Desk" class="active">007</a></li>
-            <li><a href="./index.html" title="">008</a></li>
-            <li><a href="./index.html" title="">009</a></li>
+            <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./index.html" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
-
         </div>
+
       </div>
     </nav>
   </header>
@@ -86,20 +85,19 @@
           </div>
         </div>
 
-        <div class="col-xs-4">
+        <!-- <div class="col-xs-4">
           <figure class="text-center">
             <a href="../static/assets/images/desk/model_1.png" target="_blank" title="Click to enlarge" class="img-btn">
               <img src="../static/assets/images/desk/model_1.png" class="img-responsive img-rounded img-centered"
                 alt="Desk Model #1">
             </a>
           </figure>
-        </div>
+        </div> -->
 
         <div class="col-xs-4">
           <figure class="text-center">
-            <a href="../static/assets/images/desk/model_2.jpeg" target="_blank" title="Click to enlarge"
-              class="img-btn">
-              <img src="../static/assets/images/desk/model_2.jpeg" class="img-responsive img-rounded img-centered"
+            <a href="../static/assets/images/desk/model_2.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/model_2.png" class="img-responsive img-rounded img-centered"
                 alt="Desk Model #2">
             </a>
           </figure>
@@ -125,9 +123,60 @@
 
         <div class="col-xs-4">
           <figure class="text-center">
-            <a href="../static/assets/images/desk/desk_1.png" target="_blank" title="Click to enlarge" class="img-btn">
-              <img src="../static/assets/images/desk/desk_1.png" class="img-responsive img-rounded img-centered"
+            <a href="../static/assets/images/desk/originals/desk_1.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_1.jpeg" class="img-responsive img-rounded img-centered"
                 alt="Desk #1">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/originals/desk_2.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_2.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk #2">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/originals/desk_3.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_3.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk #3">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/originals/desk_4.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_4.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk #4">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/originals/desk_5.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_5.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk #5">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/desk/originals/desk_6.jpeg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/desk/desk_6.jpeg" class="img-responsive img-rounded img-centered"
+                alt="Desk #6">
             </a>
           </figure>
         </div>
@@ -135,7 +184,6 @@
       </div>
     </div>
   </div>
-
 
   <footer class="footer-container text-center">
     <div class="container">
@@ -158,6 +206,7 @@
   </script>
 
   <script type="text/javascript" src="../static/main.70a66962.js"></script>
+
 </body>
 
 </html>
