Minor tweaks to each page. Removed old requirements.txt file.

--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="UTF-8">
-  <meta name="description" content="Here are a few of my favorite projects.">
+  <meta name="description" content="Versatile, naturally curious engineer with three years of professional experience. Utilizing my chemical and electrical engineering background provides perspective as I develop solutions in Python and C++.">
   <meta name="keywords" content="projects, works">
   <meta name="author" content="Austin Scobee">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>Works</title>
+  <title>Works | Austin Scobee</title>
 </head>
 
 <body class="">
@@ -136,14 +136,14 @@
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./index.html" title="" class="black-image-project-hover">
+                    <a href="./" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>006/009</h4>
                       <h3>Coming Soon: New Project!</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./index.html" title="" class="btn btn-default">Check it
+                      <a href="./" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
@@ -162,27 +162,27 @@
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./index.html" title="" class="black-image-project-hover">
+                    <a href="./" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>008/009</h4>
                       <h3>Coming Soon: New Project!</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./index.html" title="" class="btn btn-default">Check it
+                      <a href="./" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./index.html" title="" class="black-image-project-hover">
+                    <a href="./" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>009/009</h4>
                       <h3>Coming Soon: New Project!</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./index.html" title="" class="btn btn-default">Check it
+                      <a href="./" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
