--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
   <link href="./static/favicon.ico" rel="icon">
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>About</title>
+  <title>About | Austin Scobee</title>
 </head>
 
 <body class="">
