--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
   <link href="./static/favicon.ico" rel="icon">
   <link href="./static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>Contact</title>
+  <title>Contact | Austin Scobee</title>
 </head>
 
 <body class="">
