--- a/templates/works/snakegame.html
+++ b/templates/works/snakegame.html
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>Classic Game: Snake</title>
+  <title>Classic Snake Game | Austin Scobee</title>
 </head>
 
 <body class="">
@@ -57,10 +57,10 @@
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
             <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
-            <li><a href="./index.html" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./" title="Coming Soon: New Project!" class="">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
-            <li><a href="./index.html" title="Coming Soon: New Project!" class="">008</a></li>
-            <li><a href="./index.html" title="Coming Soon: New Project!" class="">009</a></li>
+            <li><a href="./" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
         </div>
 
